<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:orientation="vertical"
    android:outlineProvider="bounds"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/signup_txt"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="32dp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/signupUsername_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:paddingHorizontal="8dp"
        android:textSize="24dp"></EditText>

    <EditText
        android:id="@+id/signupPassword_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:textSize="24dp"></EditText>
    <EditText
        android:id="@+id/signupCoPassword_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_co_password"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:textSize="24dp"></EditText>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/btn_signup"
        android:textColor="@color/white"
        android:textSize="24dp"></Button>
</LinearLayout>